# Exsul

./: README.md  SPEC_v2.md  build-release.bat  dev.bat  package-lock.json  package.json  run.bat  svelte.config.js  vite.config.ts
.claude/: CLAUDE.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_projection_triggers.sql  003_extensions.sql  004_preset_and_flowers.sql  005_flower_erp.sql  006_version_compat.sql  007_category_sort_bridge.sql  008_item_card_color.sql  009_packing_orders.sql  010_greenhouse_warehouse.sql  011_orders_extended.sql  012_app_settings.sql  013_data_reset.sql  014_orders_sort_id_backfill.sql  015_deletion_indexes.sql  016_orders_card_color.sql  017_contacts.sql  018_items_shadow_for_flower_sorts.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_settings.rs  audit.rs  backfill.rs  backup.rs  categories.rs  contacts.rs  events.rs  flowers.rs  greenhouse.rs  inventory.rs  mod.rs  orders.rs  preset.rs  sync.rs  version.rs  ws.rs
src-tauri/src/db/: fixup.rs  migrations.rs  mod.rs  queries.rs
src-tauri/src/events/: store.rs  types.rs
src-tauri/src/sync/: backup.rs  hlc.rs  mod.rs  websocket.rs
src/lib/components/: LiquidGlassCard.svelte
src/lib/i18n/: en.json  ru.json
src/lib/stores/: appSettings.ts  audit.ts  categories.ts  contacts.ts  currency.ts  events.ts  flowers.ts  i18n.ts  inventory.ts  orders.ts  preset.ts  sync.ts  theme.ts
src/lib/sync/: yjs-provider.ts
src/routes/: +layout.svelte  +page.svelte
(+60 files in other folders)
