[package]
name = "exsul"
version = "0.1.0"
description = "Local-first P2P inventory & analytics management"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "exsul_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
